2020-11-01  Peter Bloomfield  <pbloomfield@bellsouth.net>

	main-window: Fix some geometry

	Use the correct GtkPaned's position to detect changes in the
	width of BalsaMBList and the height of BalsaIndex

	* src/main-window.c
	  (Private structure): add mblist_parent and notebook_parent
	    widgets;
	  (bw_mblist_parent_position_cb): callback for the mblist's
	    horizontal GtkPaned parent;
	  (bw_notebook_parent_position_cb): callback for the notebook's
	    vertical GtkPaned parent;
	  (bw_set_panes): set priv->mblist_parent and
	    priv->notebook_parent according to the layout;
	  (balsa_window_new),
	  (balsa_window_fix_paned),
	  (balsa_window_refresh),
	  (bw_show_mbtree),
	  (balsa_change_window_layout): use the appropriate parent
	  GtkPaneds, instead of paned_parent and paned_child.

2020-10-17  Peter Bloomfield  <pbloomfield@bellsouth.net>

	balsa-icons: rename balsa_register_pixbufs()

	to balsa_register_icon_names(), and drop its now unused parameter.

	* src/balsa-icons.c (balsa_register_icon_names):
	* src/balsa-icons.h:
	* src/main-window.c (balsa_window_new):

2020-10-17  Peter Bloomfield  <pbloomfield@bellsouth.net>

	balsa-index: Set the "icon-name" property of the
	GtkCellRendererPixbufs instead of the "pixbuf" property.

	* src/balsa-index.c (balsa_index_init): set the "icon-name" property;
	* src/balsa-icons.c (balsa_register_pixbufs):
	    register the address-view icons by name instead of pixbuf.
	* libbalsa/mailbox.c (mailbox_model_init): the status and
	    attachment columns are now strings, not pixbufs;
	  (mailbox_model_get_value): ditto;
	  (libbalsa_mailbox_set_unread_icon), (libbalsa_mailbox_set_trash_icon),
	  (libbalsa_mailbox_set_flagged_icon), (libbalsa_mailbox_set_replied_icon),
	  (libbalsa_mailbox_set_attach_icon), (libbalsa_mailbox_set_good_icon),
	  (libbalsa_mailbox_set_notrust_icon), (libbalsa_mailbox_set_bad_icon),
	  (libbalsa_mailbox_set_sign_icon), (libbalsa_mailbox_set_encr_icon):