@@ -48,7 +48,6 @@
 #include "imap-server.h"
 #include "libbalsa-conf.h"
 #include "autocrypt.h"
-#include "geometry-manager.h"
 
 #include "libinit_balsa/assistant_init.h"
 
@@ -595,7 +594,6 @@ balsa_activate_cb(GApplication *application,
             gpointer      user_data)
 {
     GtkWidget *window;
-    const geometry_t *main_size;
 
     if (balsa_app.main_window != NULL) {
         gtk_window_present_with_time(GTK_WINDOW(balsa_app.main_window),
@@ -611,19 +609,6 @@ balsa_activate_cb(GApplication *application,
     balsa_check_open_compose_window();
 
     g_idle_add((GSourceFunc) scan_mailboxes_idle_cb, NULL);
-    main_size = geometry_manager_get("MainWindow");
-    g_assert(main_size != NULL);
-    if (main_size->maximized) {
-        /*
-         * When maximized at startup, the window changes from maximized
-         * to not maximized a couple of times, so we wait until it has
-         * stabilized (100 msec is not enough!).
-         */
-        g_timeout_add(800, (GSourceFunc) balsa_window_fix_paned, balsa_app.main_window);
-    } else {
-        /* No need to wait. */
-        g_idle_add((GSourceFunc) balsa_window_fix_paned, balsa_app.main_window);
-    }
     g_timeout_add_seconds(1801, (GSourceFunc) periodic_expunge_cb, NULL);
 
     if (cmd_check_mail_on_startup || balsa_app.check_mail_upon_startup)
